mdmCeneveo/src/objects/Legal_Intake__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company Name &amp; Address</description>
        <inlineHelpText>Company Name &amp; Address</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Intake_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cenveo_Info__c</fullName>
        <label>Information Provided by Cenveo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legal_Intake_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Work__c</fullName>
        <description>Minimum/Percent of Customer&apos;s Work, if applicable</description>
        <inlineHelpText>Minimum/Percent of Customer&apos;s Work, if applicable</inlineHelpText>
        <label>Customer Work</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <description>Specific Description of Work</description>
        <inlineHelpText>Specific Description of Work</inlineHelpText>
        <label>Description of Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Agreements__c</fullName>
        <inlineHelpText>Please explain any existing agreements with this account.</inlineHelpText>
        <label>Existing Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Agreements_in_Place__c</fullName>
        <inlineHelpText>Please select YES if any existing agreements are in place with this account</inlineHelpText>
        <label>Existing Agreements in Place?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GenerateForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenerateForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Name_of_Other_Party__c</fullName>
        <label>Legal Name of Other Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Affect/Producing Facility Location name &amp; address</description>
        <inlineHelpText>Affect/Producing Facility Location name &amp; address</inlineHelpText>
        <label>Location/Address</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipName>Legal_Intake_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter_Information__c</fullName>
        <description>Name of Company, Type of Matter and/or Name of Document</description>
        <inlineHelpText>Name of Company, Type of Matter and/or Name of Document</inlineHelpText>
        <label>Matter Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <description>Is this request for an NDA?</description>
        <inlineHelpText>Is this request for an NDA?</inlineHelpText>
        <label>NDA</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Legal_Intake_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Parties_Info__c</fullName>
        <label>Information Provided by Other Parties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Work_Done__c</fullName>
        <description>Other Work Done Currently/Historically for this Customer</description>
        <inlineHelpText>Other Work Done Currently/Historically for this Customer</inlineHelpText>
        <label>Other Work Done</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PA_Freight__c</fullName>
        <description>Price Adjustments for Freight</description>
        <inlineHelpText>Price Adjustments for Freight</inlineHelpText>
        <label>Price Adjustments - Freight</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Ink__c</fullName>
        <description>Price Adjustments for Ink</description>
        <inlineHelpText>Price Adjustments for Ink</inlineHelpText>
        <label>Price Adjustments - Ink</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Manufacturing__c</fullName>
        <label>Price Adjustments - Manufacturing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Paper__c</fullName>
        <description>Price Adjustments for Paper</description>
        <inlineHelpText>Price Adjustments for Paper</inlineHelpText>
        <label>Price Adjustments - Paper</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <label>Paper</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Terms must be approved by the Credit Department</description>
        <inlineHelpText>Terms must be approved by the Credit Department</inlineHelpText>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net Cash 30 Days from Invoice Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Reviewing_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record Owner&apos;s Manager</description>
        <label>Person Reviewing Terms</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Intake_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Adjustments__c</fullName>
        <label>Price Adjustments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_NDA__c</fullName>
        <label>Purpose of NDA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Option__c</fullName>
        <label>Renewal Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Please provide at least 5 business days lead time for general matters and 10 business days lead time for contract review.

Do NOT  use “ASAP;” we need a definitive date.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Needed__c</fullName>
        <inlineHelpText>Please be specific in your request.  We prefer to receive documentation in a Word format so changes can be made and highlighted easily. ONCE YOUR AGREEMENT/DOCUMENT HAS BEEN SIGNED BY ALL PARTIES, PLEASE SEND THE ORIGINAL DOCUMENT TO THE LEGAL DEPARTMENt</inlineHelpText>
        <label>Services Needed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_Provisions__c</fullName>
        <description>Rebate/Volume Discounts/Signing Bonus or Other Special Provisions</description>
        <inlineHelpText>Rebate/Volume Discounts/Signing Bonus or Other Special Provisions</inlineHelpText>
        <label>Special Provisions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Revenue__c</fullName>
        <label>Volume/Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <inlineHelpText>Is the work being shipped outside of the United States?</inlineHelpText>
        <label>Work Being Shipped outside of US?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Legal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Legal Intake Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>